# mframework

./: .gitignore  README.md  pyproject.toml  pytest.ini
conda_recipe/: env.yaml
mframework/: __init__.py  autograd_utils.py  backend.py  dtypes.py  function.py  functional.py  main.py  state.py  tensor.py
mframework/autograd/: __init__.py  autograd.py  autograd_utils.py  backend.py  function.py  functional.py  tensor.py
mframework/autograd/ops/: __init__.py  arithmetic_ops.py  function_ops.py  reduction_ops.py  shape_ops.py
mframework/data/: __init__.py  dataloader.py  dataset.py  sampling.py
mframework/nn/: __init__.py  module.py
mframework/nn/modules/: __init__.py  container.py  nn.py  shape.py
mframework/ops/: README.md  __init__.py  arithmetic.py  arithmetic_ops.py  function_ops.py  reduction_ops.py  shape_ops.py
mframework/optim/: __init__.py  optimizer.py  sgd.py
notebooks/: autograd_example.ipynb  training_demo_1.ipynb  training_demo_MNIST_feedforward.ipynb
tests/: README.md  conftest.py  test_backward.py  test_data.py  test_nn.py  test_sgd.py  test_state.py  test_tensor.py  test_unbroadcast.py
tests/_internal/: opinfo.py
