[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mframework"
version = "0.1.0"
description = "mframework"
authors = [
    { name="Maria Cann" }
]
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mframework"]
exclude = ["notebooks", "tests"]
